# cpadapter

./: README.md  __init__.py  adapter_classes.py  conformal_adaptor.py  performance_measures.py  pyproject.toml  utils.py  visualization.py
cpadapter/: __init__.py  adapter_classes.py  conformal_adaptor.py  performance_measures.py  utils.py  visualization.py
examples/: cpadapter_example.ipynb  cpadater_example.ipynb
tests/: test_cpadapter.py  test_performance_measures.py
