[tool.poetry]
name = "cpadapter"
version = "0.1.2"
description = "This package adapts different models in order to create confidence intervals using conformal prediction"
authors = ["mjesusugarte <maria.jesus@spikelab.xyz>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.19"
nonconformist = "^2.1.0"
lightgbm = "^3.1"
sklearn = "^0.0"
pandas = "^1.1"
typing = "^3.7"
matplotlib = "^3.0"
seaborn = "^0.11"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
